force-app/main/default/objects/Inventory_Allocation__c/Inventory_Allocation__c.object-meta.xml
<CustomObject>
    <label>Inventory Allocation</label>
    <nameField>
        <displayFormat>IA-{00000}</displayFormat>
        <label>Inventory Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>