force-app/main/default/objects/Inventory_Allocation__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <referenceTo>Item_Catalog__c</referenceTo>
    <relationshipLabel>Inventory Allocations</relationshipLabel>
    <relationshipName>Item_Inventory_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>