force-app/main/default/objects/Inventory_Allocation__c/fields/Planned_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Planned_Quantity__c</fullName>
    <label>Planned Quantity</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>