force-app/main/default/objects/Inventory_Allocation__c/fields/Work_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order Line Item</label>
    <referenceTo>Work_Order_Line_Item__c</referenceTo>
    <relationshipLabel>Inventory Allocations</relationshipLabel>
    <relationshipName>WO_Line_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>